<resources>
    <string name="app_name">PlayPal</string>
    <string name="logOutText">Are you sure you would like to log out of PlayPal?</string>

    <string name="welcome_msg">Welcome!</string>
    <string name="confirm_reg">Complete Registration</string>

    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="field_confirmpass">Confirm Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_browse">BROWSE</string>

    <string name="logo_desc">logo field</string>
    <string name="upload_desc">upload image field</string>

    <string name="owner_name">Owner Name</string>
    <string name="dog_name">Dog Name</string>
    <string name="dog_breed">Breed</string>
    <string name="dog_sex">Sex</string>
    <string name="dog_weight">Weight (in lbs.)</string>
    <string name="dog_bio">Bio</string>
    <string name="dog_age">Age</string>
    <string name="btn_initProfile">Create Profile</string>

    <string name="motivation"><u>Motivation</u></string>
    <string name="motivation_paragraph">Playpal is designed to provide users with a convenient
        method of connecting and communicating with each other in order to arrange play dates for
        their dogs. More specifically, it is intended to provide dogs with new experiences, and
        to maintain or improve their social behavior, health, and happiness. After all, a healthy
        pup is a happy pup </string>

    <string name="team"><u>The Team</u></string>

    <string name="jagdeep">Jagdeep Sran</string>
    <string name="jagdeepBio">Jagdeep is majoring in computer science at Fresno State. He
    is expected to graduation on December 2021. He has been messing with computers since a young
    age but got into coding during college and was motivated to pursue a career as a software
    developer</string>

    <string name="luis">Luis Aguilar</string>
    <string name="luisBio">Luis is majoring in computer engineering at Fresno State. His expected
        graduation date is December 2021. He does not have a big computer science back ground, but
        he taught himself how to use Android Studio to help develop this mobile app. He has a 3
        year-old dog named Emy whose account you may find while swiping through profiles</string>

    <string name="cisco">Francisco Gomez</string>
    <string name="ciscoBio">Francisco Gomez is majoring in computer science and this project  was his
        first software project.</string>

    <string name="mark">Mark Ragasa</string>
    <string name="markBio">Mark is majoring in computer science at Fresno State. He is expected
        to graduate in Spring 2022. He started messing with computers in his high school years and originally wanted to be a
        computer engineer and changed his mind and applied for computer science for college.</string>

    <string name="agustin">Agustin Valadez</string>
    <string name="agustinBio">Agustin Valadez is majoring in computer science at Fresno State. He
        is currently a senior and is expected to graduate in Spring 2022, he enjoys playing video
        games and watching anime in his free time.</string>


</resources>