<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_orange"
    tools:context="com.example.playpal.RegistrationActivity">

    <TextView
        android:id="@+id/regHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_msg"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/text_box"
        android:ems="10"
        android:hint="@string/field_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/mynavyblue"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regHeader" />

    <EditText
        android:id="@+id/regPass"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:width="300dp"
        android:background="@drawable/text_box"
        android:ems="10"
        android:hint="@string/field_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/mynavyblue"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEmail" />

    <EditText
        android:id="@+id/confirmRegPass"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="10dp"
        android:width="300dp"
        android:background="@drawable/text_box"
        android:ems="10"
        android:hint="@string/field_confirmpass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/mynavyblue"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEmail" />

    <Button
        android:id="@+id/completeReg"
        android:layout_width="292dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:width="200dp"
        android:text="@string/confirm_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmRegPass" />

</androidx.constraintlayout.widget.ConstraintLayout>
